new location for navigation bar from photgraphy.html to index.html

--- a/submit.html
+++ b/submit.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Registration Successful</h1>
     <p>Thank you for registering with our community!</p>
-    <button><a href="photography.html">Go back home</a></button>
+    <button><a href="index.html">Go back home</a></button>
     <footer>
         <p>&copy; 2024 Photographers Community. All rights reserved</p>
     </footer>
