changed location of navigation bar from photography.html to index.html

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
         <input type="checkbox" id="remember" required>
         <label for="remember">Keep me signed in.</label>
 
-        <button><a href="photography.html">log in</a></button>
+        <button><a href="index.html">log in</a></button>
     </form>
     
     <footer>
