--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <nav>
             <ul>
-                <li><a href="photography.html" target="_self">Home</a></li>
+                <li><a href="index.html" target="_self">Home</a></li>
                 <li><a href="gallery.html" target="_blank">Gallery</a></li>
                 <li><a href="about.html" target="_self">About</a></li>
             </ul>
